rename create system admin role

--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -21,6 +21,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="${root}/services.xhtml">Register</a></li>
+                                <li><a href="${root}/admin/dashboard.xhtml">Admin Login</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div>
