--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
@@ -10,12 +10,13 @@
 
             <!--Import CSS libraries -->
             <link rel="stylesheet" href="${root}/css/bootstrap.min.css" type="text/css" />
-            <link rel="stylesheet" href="${root}/css/bootstrap-theme.min.css" type="text/css" />
+            <!--<link rel="stylesheet" href="${root}/css/bootstrap-theme.min.css" type="text/css" />-->
             <link rel="stylesheet" href="${root}/css/merlionportal.css" type="text/css" />
 
             <!--Import Javascript libraries-->
             <script src="${root}/js/jquery-1.11.1.min.js" type="text/javascript"></script>
             <script src="${root}/js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="${root}/js/notify.min.js" type="text/javascript"></script>
         </ui:composition>
     </head>
 </html>
