Added logout bean and page-  Manli

--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
@@ -31,6 +31,11 @@
                                     </ul>
                                 </li>
                             </ul>
+                            <h:form>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
+                                </ul>
+                            </h:form>
                         </div><!--/.nav-collapse -->
                     </div>
                 </div>
