--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -15,7 +15,7 @@
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="${root}/index.xhtml">Home</a></li>
+                                <li class="inactive"><a href="${root}/index.xhtml">Home</a></li>
                                 <li><a href="${root}/services.xhtml">Services</a></li>
                                 <li><a href="${root}/aboutus.xhtml">Contact</a></li>
                             </ul>
