--- a/MerlionPortal/MerlionPortal-war/web/css/login.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/login.css
@@ -1,10 +1,20 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Sep 17, 2014, 7:50:44 PM
-    Author     : Julietta
-*/
+.bg-img{
+    background:url("http://www.logistic-partners.com/wp-content/uploads/2012/11/Logistic-Truck-Pic-v22.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+/*    -webkit-filter:blur(2px);*/
+    min-height: 550px;
+}
 
+.login-box{
+    float:right;
+}
+
+.bg-img > .wrapper > .login-nav{
+    background-color:rgba(20,0,0,0.2);
+}
+
+.login-box > h2{
+    color:#ffffee;
+}
