--- a/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
@@ -4,9 +4,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
-        <!-- Imports -->
+        <!-- Default Imports -->
         <ui:insert name="imports" >
             <ui:include src="/templates/snippets/imports.xhtml" />
+        </ui:insert>
+        <!-- Specific Imports -->
+        <ui:insert name="more-imports" >
         </ui:insert>
         <!-- Additional Header Information -->
         <ui:insert name="header" >
@@ -14,16 +17,23 @@
         </ui:insert>
     </h:head>
     <h:body>
-        <!-- Navigation Bar -->
-        <ui:insert name="nav" >
-            <ui:include src="/templates/snippets/navigation.xhtml" />
-        </ui:insert>
-        <!-- Content -->
-        <ui:insert name="content" >
-        </ui:insert>
-        <!-- Footer -->
-        <ui:insert name="footer" >
-            <ui:include src="/templates/snippets/footer.xhtml" />
+        <ui:insert name="body">
+            <div class="wrapper">
+                <!-- Navigation Bar -->
+                <ui:insert name="nav" >
+                    <ui:include src="/templates/snippets/navigation.xhtml" />
+                </ui:insert>
+                <!-- Content -->
+                <div class="container content-area">
+                    <ui:insert name="content" >
+                    </ui:insert>
+                </div>
+                <div class="push"></div>
+            </div>
+            <!-- Footer -->
+            <ui:insert name="footer" >
+                <ui:include src="/templates/snippets/footer.xhtml" />
+            </ui:insert>
         </ui:insert>
     </h:body>
 </html>
