--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
@@ -22,6 +22,9 @@
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="${root}/admin/createuser.xhtml">Create User</a></li>
                                         <li><a href="${root}/admin/viewusers.xhtml">View Users</a></li>
+                                        <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                                            <li><a href="${root}/admin/viewallsubscribers.xhtml">View Subscribers</a></li>
+                                        </c:if>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<span class="caret"></span></a>
@@ -30,10 +33,16 @@
                                         <li><a href="${root}/admin/viewroles.xhtml">View Roles</a></li>
                                     </ul>
                                 </li>
+                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Logs<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#">View Logs</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                             <h:form>
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><h:commandLink ><i class="glyphicon glyphicon-envelope"></i></h:commandLink></li>
+                                    <li><h:commandLink>${dashboardBean.loginedUser.firstName}</h:commandLink></li>
                                     <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
                                 </ul>
                             </h:form>
