edit dashboard box layout

--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -23,7 +23,7 @@
                 <ui:include src="/templates/snippets/admin/navigation.xhtml" />
             </ui:insert>
             <!-- Content -->
-            <div class="content-area">
+            <div class="container content-area">
                 <ui:insert name="content" >
                 </ui:insert>
             </div>
