--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -114,7 +114,7 @@ html, body {
 }
 .footer{
     background-color:rgba(20,0,0,0.2);
-    color:#ddd;
+    color:#fff;
     padding:25px;
 }
 .footer, .push {
