added dashboard acccesright control - Manli

--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -8,6 +8,9 @@
         <ui:insert name="imports" >
             <ui:include src="/templates/snippets/imports.xhtml" />
         </ui:insert>
+        <!-- Specific Imports -->
+        <ui:insert name="more-imports" >
+        </ui:insert>
         <!-- Additional Header Information -->
         <ui:insert name="header" >
             <ui:include src="/templates/snippets/header.xhtml" />
