--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
@@ -40,11 +40,12 @@
                                 </li>
                             </ul>
                             <h:form>
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li><h:commandLink ><i class="glyphicon glyphicon-envelope"></i></h:commandLink></li>
-                                    <li><h:commandLink>${dashboardBean.loginedUser.firstName}</h:commandLink></li>
-                                    <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
-                                </ul>
+                                <li class="dropdown nav navbar-nav navbar-right header-push-bottom"><a href="#"  class="dropdown-toggle black-link" data-toggle="dropdown"><h:outputText value="${dashboardBean.loginedUser.firstName}"/><span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#"><i class="glyphicon glyphicon-envelope"></i>  Messages</a></li>
+                                        <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
+                                    </ul>
+                                </li>
                             </h:form>
                         </div><!--/.nav-collapse -->
                     </div>
