template for side bar. left for left side bar content. right for main view content

--- a/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
@@ -26,6 +26,12 @@
                 <!-- Content -->
                 <div class="container content-area">
                     <ui:insert name="content" >
+                        <div class="container">
+                            <ui:insert name="left"></ui:insert>
+                        </div>
+                        <div class="containner">
+                            <ui:insert name="right"></ui:insert>
+                        </div>
                     </ui:insert>
                 </div>
                 <div class="push"></div>
