--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -25,6 +25,12 @@
             <!-- Content -->
             <div class="container content-area">
                 <ui:insert name="content" >
+                    <div class="container">
+                        <ui:insert name="left"></ui:insert>
+                    </div>
+                    <div class="containner">
+                        <ui:insert name="right"></ui:insert>
+                    </div>
                 </ui:insert>
             </div>
             <div class="push"></div>
