template for side bar. left for left side bar content. right for main view content

--- a/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
@@ -26,10 +26,10 @@
                 <!-- Content -->
                 <div class="container content-area">
                     <ui:insert name="content" >
-                        <div class="container">
+                        <div class="container left-container">
                             <ui:insert name="left"></ui:insert>
                         </div>
-                        <div class="containner">
+                        <div class="containner right-container">
                             <ui:insert name="right"></ui:insert>
                         </div>
                     </ui:insert>
