--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -113,6 +113,13 @@ ul.rights-menu li{
     padding-right: 100px;
 }*/
 
+.left-container{
+    width: 30%;
+}
+
+.right-container{
+    width:70%;
+}
 //*************************************************//
 //footer
 * {
