edit templates for side bars

--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -33,7 +33,7 @@
                     </div>
                 </ui:insert>
             </div>
-            <div class="push"></div>
+<!--            <div class="push"></div>-->
         </div>
         <!-- Footer -->
         <ui:insert name="footer" >
