--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -23,6 +23,12 @@
         </ui:insert>
         <!-- Content -->
         <ui:insert name="content" >
+            <div class="container left-container">
+                <ui:insert name="left"></ui:insert>
+            </div>
+            <div class="containner right-container">
+                <ui:insert name="right"></ui:insert>
+            </div>
         </ui:insert>
         <!-- Footer -->
         <ui:insert name="footer" >
