Modified view user update and delete - Manli

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -10,16 +10,9 @@
     margin-top:15px;
 }
 
-a.black-link:link{
+li > .black-link{
     color:#777;
-}
-
-a.black-link:hover{
-    color:#000;
-}
-
-a.black-link:visited{
-    color:#777;
+    text-decoration: none;
 }
 
 .input-addon-fixedwidth{
