--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -3,15 +3,16 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
     <body>
         <ui:composition>
             <c:set var="root" value="${request.contextPath}" />
             <nav>
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="${root}/index.xhtml">Merlion Portal</a>
+                    <div class="container-fluid">
+                        <div class="navbar-header">                            
+                            <a class="navbar-brand" href="${root}/index.xhtml"> <h:graphicImage value ="/img/MerlionLogistics.png" width="39" height="34" /> Merlion Portal</a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
