--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -11,8 +11,9 @@
             <nav>
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container-fluid">
-                        <div class="navbar-header">                            
-                            <a class="navbar-brand" href="${root}/index.xhtml"> <h:graphicImage value ="/img/MerlionLogistics.png" width="39" height="34" /> Merlion Portal</a>
+                        <div class="navbar-header">        
+                            <img src="${root}/img/MerlionLogistics.png" class="navbar-brand"/>
+                            <a class="navbar-brand" href="${root}/index.xhtml">Merlion Portal</a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
