update templates to include push

--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -23,6 +23,7 @@
                 <ui:include src="/templates/snippets/user/navigation.xhtml" />
             </ui:insert>
             <!-- Content -->
+            <div class="container">
             <ui:insert name="content" >
                 <div class="containner right-container">
                     <ui:insert name="right"></ui:insert>
@@ -32,6 +33,7 @@
                 </div>            
             </ui:insert>
             <div class="push"></div>
+            </div>
         </div>
         <!-- Footer -->
         <ui:insert name="footer" >
