--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -25,15 +25,15 @@
             <!-- Content -->
             <div class="container content-area">
                 <ui:insert name="content" >
-            <div class="containner right-container">
-                <ui:insert name="right"></ui:insert>
-            </div>
-            <div class="container left-container">
-                <ui:insert name="left"></ui:insert>
-            </div> 
+                    <div class="containner right-container">
+                        <ui:insert name="right"></ui:insert>
+                    </div>
+                    <div class="container left-container">
+                        <ui:insert name="left"></ui:insert>
+                    </div> 
                 </ui:insert>
             </div>
-<!--            <div class="push"></div>-->
+            <div class="push"></div>
         </div>
         <!-- Footer -->
         <ui:insert name="footer" >
