changed logo- Manli

--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -12,8 +12,7 @@
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container-fluid">
                         <div class="navbar-header">        
-                            <img src="${root}/img/MerlionLogistics.png" class="navbar-brand"/>
-                            <a class="navbar-brand" href="${root}/index.xhtml">Merlion Portal</a>
+                            <img src="${root}/img/logo.png" style="width: 160px; height: 50px " />
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
