--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -23,7 +23,7 @@
                 <ui:include src="/templates/snippets/user/navigation.xhtml" />
             </ui:insert>
             <!-- Content -->
-            <div class="container">
+            <div class="container content-area">
             <ui:insert name="content" >
                 <div class="containner right-container">
                     <ui:insert name="right"></ui:insert>
