--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -126,11 +126,13 @@ ul.rights-menu li{
 .left-container{
     width: 23%;
     float:left;
+    padding: 50px 0px;
 }
 
 .right-container{
     width:77%;
     float:right;
+    padding: 50px 0px;
 }
 //*************************************************//
 //footer
@@ -168,6 +170,7 @@ h2.system-welcome{
 }
 .system-description{
     padding-top:30px;
+    padding-bottom:30px;
 }
 .system-banner{
     height:200px;
