--- a/MerlionPortal/MerlionPortal-war/web/css/login.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/login.css
@@ -4,7 +4,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
 /*    -webkit-filter:blur(2px);*/
-    min-height: 1000px;
+     min-height: 1000px;
 }
 
 .login-box{
@@ -23,6 +23,7 @@
     position:absolute;
     bottom:100px;
     left:10%;
+    position:fixed;
 }
 .some-quote-box h2{
     font-family:Century Gothic;
