--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -17,7 +17,8 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
                                 <li class="inactive"><a href="${root}/index.xhtml">Home</a></li>
-                                <li><a href="${root}/services.xhtml">Services</a></li>
+                                <li><a href="${root}/services.xhtml">Packages</a></li>
+                                <li><a href="${root}/servicedescription.xhtml">Services</a></li>
                                 <li><a href="${root}/aboutus.xhtml">Contact</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
