--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -207,3 +207,18 @@ h2.system-welcome{
 .min-horizontal-width{
     min-width: 50px;
 }
+ul.a {
+    list-style-type: circle;
+}
+
+ul.b {
+    list-style-type: square;
+}
+
+ol.c {
+    list-style-type: upper-roman;
+}
+
+ol.d {
+    list-style-type: lower-alpha;
+}
