import table-format js and merlion portal js

--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
@@ -16,6 +16,7 @@
             <!--Import Javascript libraries-->
             <script src="${root}/js/bootstrap.min.js" type="text/javascript"></script>
             <script src="${root}/js/notify.min.js" type="text/javascript"></script>
+            <script src="${root}/js/merlionportal.js" type="text/javascript"></script>
         </ui:composition>
     </head>
 </html>
