--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
@@ -2,14 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
     <body>
         <ui:composition>
             <div class="footer" align="center">
                 <div class="container">
-                    <a href="#">Home</a>
-                    <a href="#">Contact Us</a>
-                    <a href="#">Privacy</a>
+                    <a href="${request.contextPath}/index.xhtml">Home</a>
+                    <a href="#">Contact Us at: +65 98373234</a><br />
                     <span>&nbsp; Copyright (c) 2014</span>
                 </div>
             </div>
