fix padding bug for sub-systems

--- a/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
@@ -26,7 +26,7 @@
                 <!-- Content -->
                 <div class="container content-area">
                     <ui:insert name="content" >
-                        <div class="containner right-container">
+                        <div class="container right-container">
                             <ui:insert name="right"></ui:insert>
                         </div>
                         <div class="container left-container">
