--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -132,15 +132,15 @@ ul.rights-menu li{
 }*/
 
 .left-container{
-    width: 23%;
+    width: 30%;
     float:left;
-    padding: 50px 0px;
+    margin: 50px 0px;
 }
 
 .right-container{
-    width:77%;
+    width:70%;
     float:right;
-    padding: 50px 0px;
+    margin: 50px 0px;
 }
 //*************************************************//
 //footer
