integrated tms css

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -190,6 +190,9 @@ h2.system-welcome{
 .wms-system-banner{
     background: url("http://parkplacerecycling.com/wp-content/uploads/2013/09/warehousing.jpg") -550px -350px no-repeat;
 }
+.tms-system-banner{
+    background: url("http://www.hollingsworth-vose.com/Global/Industry%20Images/industry_transportation_truck_1020x420.jpg") -0px -70px no-repeat;
+}
 .mrp-system-banner{
     background: url("http://stok-engineering.com//wp-content/uploads/2013/01/bottling-line-2.jpg") -50px -300px no-repeat;
 }
