--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
@@ -9,8 +9,8 @@
         <ui:composition>
             <div class="footer" align="center">
                 <div class="container">
-                    <a href="${request.contextPath}/index.xhtml">Home</a><br />
-                    Contact Us at: +65 98373234<br />
+                    <a href="${request.contextPath}/index.xhtml">Home</a>
+                    <span>Contact Us at: +65 98373234</span>
                     <span>&nbsp; Copyright (c) 2014</span>
                 </div>
             </div>
