--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/navigation.xhtml
@@ -22,6 +22,7 @@
                                 <li><a href="${root}/aboutus.xhtml">Contact</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
+                                <li><a href="${root}/feedback.xhtml">Feedback</a></li>
                                 <li><a href="${root}/services.xhtml">Register</a></li>
                                 <li><a href="${root}/admin/dashboard.xhtml">Login</a></li>
                             </ul>
